fix: broken lbe link

--- a/docs/50_data_publication/25_best_practice.mdx
+++ b/docs/50_data_publication/25_best_practice.mdx
@@ -3,7 +3,7 @@ title: "Best Practices"
 slug: "/best_practice"
 ---
 
-import useBaseUrl from '@docusaurus/useBaseUrl';
+import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Best Practices
 
@@ -51,7 +51,12 @@ While field-specific repositories provide significant support for the [FAIRifica
 
 To start, all data to be published should be collected and ordered in a logical folder structure, e.g. a folder for NMR and another folder for MS data (figure 1). Nested folder structures should be avoided and aspects of [data organisation](/docs/data_organisation), such as file naming, should be taken into account. Researchers should aim for a data package which is as self-explanatory as the supplemental PDFs, they have previously published along scientific articles.
 
-<img align="center" src={useBaseUrl('/img/data_pub/best_practice_generic_folders_content.png')} alt="" width="100%" />
+<img
+	align="center"
+	src={useBaseUrl("/img/data_pub/best_practice_generic_folders_content.png")}
+	alt=""
+	width="100%"
+/>
 
 **Figure 1:** Example folder structure and content of the [Lead by Example](/docs/lbe_intro) dataset of [Linderazuelene](/docs/datasets/?doi=10.1002/ciuz.201900868).
 
@@ -74,7 +79,7 @@ For a better understanding of data publications in generic repositories and how 
 - in RADAR4Chem: [Linderazulen aus einer invasiven Pflanze - Delphi und sein violettes Wunder](/docs/datasets/?doi=10.1002/ciuz.201900868).
 - in Zenodo: [A dataset of 255,000 randomly selected and manually classified extracted ion chromatograms for evaluation of peak detection methods](/docs/datasets/?doi=10.3390/metabo10040162).
 - in RADAR: [Synthesis and biological evaluation of highly potent fungicidal deoxy-hygrophorones](/docs/datasets/?doi=10.3390/metabo10040162).
-- in DaRus: [Predictive design of ordered mesoporous silica with well-defined, ultra-large mesopores](/docs/tba).
+- in DaRus: [Predictive design of ordered mesoporous silica with well-defined, ultra-large mesopores](/docs/datasets/?doi=10.1039/D2ME00107A).
 
 <!---
 ## Best practice to publish NMR data
@@ -86,5 +91,6 @@ tbd
 tbd
 --->
 
-----
+---
+
 Main authors: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661), [ORCID:0000-0002-6243-2840](https://orcid.org/0000-0002-6243-2840) and [ORCID:0000-0003-2060-842X](https://orcid.org/0000-0003-2060-842X)
