fix: broken links

--- a/docs/20_role/40_data_steward.mdx
+++ b/docs/20_role/40_data_steward.mdx
@@ -5,12 +5,11 @@ slug: "/data_steward"
 
 # Data Steward
 
-The role of a data steward is fairly new in research and thus is still evolving and being defined. In 2019, the [final report](https://doi.org/10.5281/zenodo.3474630) for the Dutch project titled *Towards a community-endorsed data steward profession description for life science research* defined data stewardship as follows:
+The role of a data steward is fairly new in research and thus is still evolving and being defined. In 2019, the [final report](https://doi.org/10.5281/zenodo.3474630) for the Dutch project titled _Towards a community-endorsed data steward profession description for life science research_ defined data stewardship as follows:
 
 > “Data stewardship is the responsible planning and executing of all actions on digital data before, during and after a research project, with the aim of optimising the usability, reusability and reproducibility of the resulting data.”
 
 From this definition, it follows that a data steward is concerned with, in broad terms, ensuring the quality of the research data throughout the [research data life cylce](/docs/data_life_cycle) by applying the [FAIR Data Principles](/docs/fair).
-
 
 ## Tasks and Skills
 
@@ -19,7 +18,7 @@ Research Data Services at TU Delft, is quoted saying:
 
 > “Interpersonal skills are key to the success of the Data Steward.”
 
-This reflects the importance of a data steward's communication skills. 
+This reflects the importance of a data steward's communication skills.
 
 Data stewards may work directly at an institute, but, in Germany, many are part of larger collaborative projects such as [Collaborative Research Centers](https://www.dfg.de/en/research_funding/programmes/coordinated_programmes/collaborative_research_centres/) or even part of various [NFDI consortia](https://www.nfdi.de/?lang=en). They often take on the role of communicating a specific research community's needs and requirements, enabling developers at IT centers, university libraries, ELN providers, and the NFDI to create tailored solutions for digital research data. In the above-mentioned cookbook, several strategies for developing and settling data stewards are outlined. One of the presented models is the “rent-a-data-steward”, which differs from the current models. Here, data stewards are not permanently located within institutes, instead, they are “loaned” to the institutes, projects, etc. for a certain period of time.
 
@@ -33,14 +32,13 @@ Chemical research is often a combination of observational data and digital data.
 
 ## Networking and Continuous Training
 
-Due to their wide breadth of duties, data stewards are continuously involved in networking, exchange, and furthering their own knowledge on RDM approaches, best practices, tools, and services. The RWTH Aachen University, for example, holds a monthly [Open RDM Network Meeting](https://www.rwth-aachen.de/go/id/mkbr/file/9-6699/) (in German) geared at data stewards, while state initiatives such as [fdm.nrw](https://www.fdm.nrw/) offer various networking and training opportunities. NFDI4Chem also organizes an entry-level workshop series titled [FAIR Research Data Management: Basics for Chemists](https://www.nfdi4chem.de/index.php/event/workshop-fair-research-data-management-basics-for-chemists/) for researchers and data stewards alike and focuses on research data management concepts and tools in chemistry.
+Due to their wide breadth of duties, data stewards are continuously involved in networking, exchange, and furthering their own knowledge on RDM approaches, best practices, tools, and services. The RWTH Aachen University, for example, holds a monthly [Open RDM Network Meeting](https://www.rwth-aachen.de/go/id/mkbr/file/9-6699/) (in German) geared at data stewards, while state initiatives such as [fdm.nrw](https://www.fdm.nrw/) offer various networking and training opportunities. NFDI4Chem also organizes an entry-level workshop series titled [FAIR Research Data Management: Basics for Chemists](https://www.nfdi4chem.de/workshops/) for researchers and data stewards alike and focuses on research data management concepts and tools in chemistry.
 
 ## Sources and Further Information
 
-- [Final report: Towards FAIR data steward as profession for the lifesciences. Report of a ZonMw funded collaborative approach built on existing expertise](https://doi.org/10.5281/zenodo.3474630) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3474630.svg)](https://doi.org/10.5281/zenodo.3474630)
-- [Connie Clare, Maria Cruz, Elli Papadopoulou, James Savage, Marta Teperek, Yan Wang, Iza Witkowska, and Joanne Yeomans. 2019.Engaging Researchers with Data Management: The Cookbook (epub).OpenBookPublishers](https://doi.org/10.11647/OBP.0185)
-- [A community consultation on career tracks for data stewards - IDCC16 lightning talk and RDA VP17 poster presentation ![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.4707028.svg)](https://doi.org/10.5281/zenodo.4707028)
-- German: [Aufgaben- und Kompetenzspektrum der Data Stewards an der RWTH Aachen University : generell und explizit am Beispiel des Sonderforschungsbereichs 1382](https://doi.org/10.17192/bfdm.2021.3.8352)
-- German: [Data Stewards an den TU9-Universitäten - Bestandsaufnahme, Handlungsfelder und Kooperationspotenzial](https://doi.org/10.17192/bfdm.2022.1.8364)
-- German: [Forschung unterstützen: Empfehlungen für Data Stewardship an akademischen Forschungsinstitutionen - Ergebnisse des Projektes DataStew](https://doi.org/10.5281/zenodo.7327371) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.7327371.svg)](https://doi.org/10.5281/zenodo.7327371)
- 
+-   [Final report: Towards FAIR data steward as profession for the lifesciences. Report of a ZonMw funded collaborative approach built on existing expertise](https://doi.org/10.5281/zenodo.3474630) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3474630.svg)](https://doi.org/10.5281/zenodo.3474630)
+-   [Connie Clare, Maria Cruz, Elli Papadopoulou, James Savage, Marta Teperek, Yan Wang, Iza Witkowska, and Joanne Yeomans. 2019.Engaging Researchers with Data Management: The Cookbook (epub).OpenBookPublishers](https://doi.org/10.11647/OBP.0185)
+-   [A community consultation on career tracks for data stewards - IDCC16 lightning talk and RDA VP17 poster presentation ![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.4707028.svg)](https://doi.org/10.5281/zenodo.4707028)
+-   German: [Aufgaben- und Kompetenzspektrum der Data Stewards an der RWTH Aachen University : generell und explizit am Beispiel des Sonderforschungsbereichs 1382](https://doi.org/10.17192/bfdm.2021.3.8352)
+-   German: [Data Stewards an den TU9-Universitäten - Bestandsaufnahme, Handlungsfelder und Kooperationspotenzial](https://doi.org/10.17192/bfdm.2022.1.8364)
+-   German: [Forschung unterstützen: Empfehlungen für Data Stewardship an akademischen Forschungsinstitutionen - Ergebnisse des Projektes DataStew](https://doi.org/10.5281/zenodo.7327371) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.7327371.svg)](https://doi.org/10.5281/zenodo.7327371)
