--- a/docs/20_role/40_data_steward.mdx
+++ b/docs/20_role/40_data_steward.mdx
@@ -32,7 +32,7 @@ Chemical research is often a combination of observational data and digital data.
 
 ## Networking and Continuous Training
 
-Due to their wide breadth of duties, data stewards are continuously involved in networking, exchange, and furthering their own knowledge on RDM approaches, best practices, tools, and services. The RWTH Aachen University, for example, holds a monthly [Open RDM Network Meeting](https://www.rwth-aachen.de/go/id/mkbr/file/9-6699/) (in German) geared at data stewards, while state initiatives such as [fdm.nrw](https://www.fdm.nrw/) offer various networking and training opportunities. NFDI4Chem also organizes an entry-level workshop series titled [FAIR Research Data Management: Basics for Chemists](https://www.nfdi4chem.de/workshops/) for researchers and data stewards alike and focuses on research data management concepts and tools in chemistry.
+Due to their wide breadth of duties, data stewards are continuously involved in networking, exchange, and furthering their own knowledge on RDM approaches, best practices, tools, and services. The RWTH Aachen University, for example, holds a monthly [Open RDM Network Meeting](https://www.rwth-aachen.de/cms/root/Forschung/Forschungsdatenmanagement/FDM-Netzwerk/~retpu/Data-Stewards/) (in German) geared at data stewards, while state initiatives such as [fdm.nrw](https://www.fdm.nrw/) offer various networking and training opportunities. NFDI4Chem also organizes an entry-level workshop series titled [FAIR Research Data Management: Basics for Chemists](https://www.nfdi4chem.de/workshops/) for researchers and data stewards alike and focuses on research data management concepts and tools in chemistry.
 
 ## Sources and Further Information
 
