--- a/docs/50_data_publication/20_choose_repository.mdx
+++ b/docs/50_data_publication/20_choose_repository.mdx
@@ -138,19 +138,18 @@ Quick stats:
 	</a> serves as their curation tracking system. The curation itself is performed
 	by the <a href="https://massbank.github.io/MassBank-documentation/contributor_documentation.html">
 		MassBank record validator
-	</a>. The datasets can be searched for compound and mass spectrometry
-	information and peaks. MassBank Record ID (Accession) and USI (Universal
-	Spectrum Identifier) are used as persistent identifier systems. The MassBank
-	EU spectral data is hosted in a revision control system with all spectral
-	data and the corresponding metadata in a human-readable record format, and
-	continuous integration (CI) checking record integrity for each change.
-	Instances of the web interface are hosted at Helmholtz Centre for
-	Environmental Research (UFZ) (Leipzig) and Leibniz Institute of Plant
-	Biochemistry (IPB) (Halle) and can be installed locally as well. They offer
-	interfaces for data import via Git (MassBank record format) and for data
-	export (JSON-LD) and a REST API. On top of that{" "}
-	<a href="https://github.com/MassBank/RMassBank">RMassBank</a> is provided as
-	a separated data processing/analysis tool.
+	</a>. The datasets can be searched for compound and mass spectrometry information
+	and peaks. MassBank Record ID (Accession) and USI (Universal Spectrum Identifier)
+	are used as persistent identifier systems. The MassBank EU spectral data is hosted
+	in a revision control system with all spectral data and the corresponding metadata
+	in a human-readable record format, and continuous integration (CI) checking record
+	integrity for each change. Instances of the web interface are hosted at Helmholtz
+	Centre for Environmental Research (UFZ) (Leipzig) and Leibniz Institute of Plant
+	Biochemistry (IPB) (Halle) and can be installed locally as well. They offer interfaces
+	for data import via Git (MassBank record format) and for data export (JSON-LD)
+	and a REST API. On top of that <a href="https://github.com/MassBank/RMassBank">
+		RMassBank
+	</a> is provided as a separated data processing/analysis tool.
 </details>
 
 ### RADAR4Chem - research data repository
@@ -169,7 +168,7 @@ Quick stats:
  
 RADAR4Chem is a generic repository for the publication of research data from all disciplines of chemistry. It was created in 2022 and is hosted at FIZ Karlsruhe - Leibniz Institute for Information Infrastructure. 
 RADAR4Chem is based on the established research data repository RADAR Cloud. RADAR Cloud is primarily used by academic institutions for institutional research data management (data archiving and publication). The use of RADAR Cloud is subject to a fee and requires the stipulation of a contract. 
-RADAR4Chem, on the other hand, is exclusively directed to researchers in the field of chemistry at publicly funded research institutions and universities in Germany. No contract is required and no fees are charged. RADAR4Chem allows discipline- and format-independent publication and storage (at least 25 years) of research data from all disciplines of chemistry. It serves as a catch-all repository, which complements the already existing portfolio of discipline specific repositories and is e.g. ideally suited for cross-disciplinary data or datasets with a multitude of different data formats. RADAR4Chem is easy and low-threshold to use. The researchers are responsible for the upload, organisation, annotation, and curation of research data as well as the peer-review process (as an optional step) and finally their publication. Using the service requires <a href="https://www.nfdi4chem.de/index.php/2650-2/">advising from FIZ Karlsruhe</a>, registration to RADAR4Chem, and consent to the <a href="https://radar.products.fiz-karlsruhe.de/sites/default/files/radar/docs/License_and_User_Instructions_for_Data_Providers_RADAR4Chem.pdf">RADAR4Chem licence and usage instructions</a>.
+RADAR4Chem, on the other hand, is exclusively directed to researchers in the field of chemistry at publicly funded research institutions and universities in Germany. No contract is required and no fees are charged. RADAR4Chem allows discipline- and format-independent publication and storage (at least 25 years) of research data from all disciplines of chemistry. It serves as a catch-all repository, which complements the already existing portfolio of discipline specific repositories and is e.g. ideally suited for cross-disciplinary data or datasets with a multitude of different data formats. RADAR4Chem is easy and low-threshold to use. The researchers are responsible for the upload, organisation, annotation, and curation of research data as well as the peer-review process (as an optional step) and finally their publication. Using the service requires <a href="https://www.nfdi4chem.de/index.php/2650-2/">advising from FIZ Karlsruhe</a>, registration to RADAR4Chem, and consent to the <a href="https://radar.products.fiz-karlsruhe.de/sites/default/files/radar/docs/terms/License_and_User_Instructions_for_Data_Providers_RADAR4Chem.pdf">RADAR4Chem licence and usage instructions</a>.
 Authentication is supported after self-registration and via <a href="https://doku.tid.dfn.de/en:dfnaai:start">DFN-AAI</a> (<a href="https://www.incommon.org/software/shibboleth/">Shibboleth</a>). Metadata are recorded using the internal <a href="https://radar.products.fiz-karlsruhe.de/en/radarfeatures/radar-metadatenschema">RADAR Metadata Schema</a> (based on <a href="https://schema.datacite.org/">DataCite Metadata Schema 4.0</a>), which supports 10 mandatory and 13 optional metadata fields. Annotation can be made on the dataset level and on the individual files and folders level. A <a href="https://radar.products.fiz-karlsruhe.de/en/radarfeatures/lizenzen-fuer-forschungsdaten">user licence</a> which indicates re-use rules for the data, must be defined for each dataset. Each published dataset receives a DOI which is registered with <a href="https://datacite.org/">DataCite</a>. RADAR Metadata uses a combination of controlled lists and free text entries. Author identification is ensured by ORCID iD and funder identification by <a href="https://www.crossref.org/pdfs/about-funder-registry.pdf">CrossRef Open Funder Registry</a> (more interfacing options will be implemented in the future). Datasets can be easily linked with other digital resources (e.g. text publications) via a “related identifier”. To maximise data dissemination and discoverability, the metadata of published datasets are indexed in various formats (e.g. RADAR and DataCite) and offered for public metadata harvesting e.g. via an <a href="https://radar.products.fiz-karlsruhe.de/en/radarfeatures/radar-oai-provider">OAI-provider</a>. The research data is stored permanently on magnetic tapes redundantly in three copies at different locations at the Steinbuch Centre for Computing (SCC) of the Karlsruhe Institute of Technology (KIT, 2 copies) and at the Centre for Information Services and High Performance Computing (ZIH) of the TU Dresden (1 copy).
 
 Please note: currently, the free-of-charge use of RADAR4Chem is limited to a maximum of 10 GB storage volume per research project. Researchers from the NFDI4Chem community whose research data volume exceeds this free quota and are interested in using RADAR functions institution-wide or in archiving research data, can stipulate a <a href="https://radar.products.fiz-karlsruhe.de/en/radaragreementsprices/vertraege-preise">regular RADAR Cloud contract</a>.
