--- a/docs/00_intro/10_fair.mdx
+++ b/docs/00_intro/10_fair.mdx
@@ -145,5 +145,4 @@ Where required, format converters should be linked in the dataset’s metadata.
 - [Go-FAIR initiative: FAIR Principles](https://www.go-fair.org/fair-principles/)
 - [TIB Blog: The FAIR Data Principles for Research Data](https://blogs.tib.eu/wp/tib/2017/09/12/the-fair-data-principles-for-research-data/)
 - [FAIRSFAIR: How to be FAIR with your data. A teaching and training handbook for higher education institutions](https://zenodo.org/record/5787046#.Yd_Emv7MKUn)
-- [Checklist: How FAIR are your data?
-](https://doi.org/10.5281/zenodo.1065991) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.1065991.svg)](https://doi.org/10.5281/zenodo.1065991)
+- [Checklist: How FAIR are your data?](https://doi.org/10.5281/zenodo.1065991) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.1065991.svg)](https://doi.org/10.5281/zenodo.1065991)
