fix: possible artifacts for translation

--- a/docs/00_intro/20_data_life_cycle.mdx
+++ b/docs/00_intro/20_data_life_cycle.mdx
@@ -14,8 +14,6 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 In scientific work, the assurance of [good research practice](https://doi.org/10.5281/zenodo.3923602) is the highest imperative.
 
 To ensure compliance, professional handling of research data is of particular importance. To illustrate the handling of research data, there are various models such as the [domain model](https://subs.emis.de/LNI/Proceedings/Proceedings257/55.pdf) or the research data life cycle model. The research data life cycle model describes the lifespan of the data and beyond based on various phases from planning to publication or conscious deletion. For the research data life cycle, there are different approaches to the same model depending on the institution, the funder, etc. Different priorities can be placed on the data life cycle. The approach taken by [NFDI4Chem](https://www.nfdi4chem.de/) is shown in the figure on the right.
-<!-- One possible approach is shown in figure 1. -->
-
 
 ## Phase 1: Experiment Design
 
@@ -59,7 +57,7 @@ What is the potential of your data?
 ## Sources and further information
 
 - DFG Guidelines for Safeguarding Good Research Practice. Code of Conduct [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3923602.svg)](https://doi.org/10.5281/zenodo.3923602)
-- [Introducing research data management as a service suite at RWTH Aachen University](https://dl.gi.de/handle/20.500.12116/894) <!--ISBN: 978-3-88579-651-0-->
+- [Introducing research data management as a service suite at RWTH Aachen University](https://dl.gi.de/handle/20.500.12116/894)
 - [Review of data management lifecycle models](https://researchportal.bath.ac.uk/en/publications/review-of-data-management-lifecycle-models)
 - [DCC: 5 steps to decide what data to keep](https://www.dcc.ac.uk/guidance/how-guides/)
 - German: [Überblick zum Management von Forschungsdaten (FDM I) = Research Data Management - An Overview](https://doi.org/10.18154/RWTH-2019-06489)
