--- a/docs/50_data_publication/60_data_availability_statement.mdx
+++ b/docs/50_data_publication/60_data_availability_statement.mdx
@@ -62,7 +62,7 @@ Please note that data availability statements such as _'data available on reques
 - [Joint Declaration of Data Citation Principles](https://doi.org/10.25490/a97f-egyk)
 - [Data Access Committee - European Genome-Phenome Archive ](https://ega-archive.org/submission/data_access_committee)
 
-_This article is licensed under a Creative Commons Universal (CC0 1.0) Public Domain Dedication International License._
+*This article is licensed under a Creative Commons Universal (CC0 1.0) Public Domain Dedication International License.*
 
 ![CC0 badge](https://licensebuttons.net/l/zero/1.0/88x31.png)
 
