fix: CC0 part of mrcs page

--- a/docs/50_data_publication/70_machine-readable_chemical_structures.mdx
+++ b/docs/50_data_publication/70_machine-readable_chemical_structures.mdx
@@ -94,7 +94,7 @@ Templates for such a table are provided as [.ods](pathname://../../assets/Supple
 
 If the experimental work is documented in an [ELN](/docs/eln), these information could also be provided by the ELN system. Chemotion ELN generates [SMILES](/docs/smiles), [InChI](/docs/inchi), InChIKey as well as RInChI and RInChIKey for compounds and reactions. These information are also available in Chemotion Repository i.e. such a supplementary table is not required with structured, field-specific repositories such as Chemotion Repository, while datasets in generic repositories will profit from such a table.
 
-*This article is licensed under a Creative Commons Universal (CC0 1.0) Public Domain Dedication International License.* 
+*This page is licensed under a Creative Commons Universal ([CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/deed.en)) Public Domain Dedication International License.*
 
 ![CC0 badge](https://licensebuttons.net/l/zero/1.0/88x31.png)
 
