feat: added CC0 to HTCTRC page

--- a/docs/50_data_publication/20_choose_repository.mdx
+++ b/docs/50_data_publication/20_choose_repository.mdx
@@ -312,6 +312,10 @@ Quick stats:
 	of the Nature publishing group.
 </details>
 
+*This page is licensed under a Creative Commons Universal ([CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/deed.en)) Public Domain Dedication International License.*
+
+![CC0 badge](https://licensebuttons.net/l/zero/1.0/88x31.png)
+
 ---
 
 Main author: [ORCID:0000-0001-7696-7662](https://orcid.org/0000-0001-7696-7662), [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661) and [ORCID:0000-0002-5035-7978](https://orcid.org/0000-0002-5035-7978)
