fix: article -> page

--- a/docs/50_data_publication/50_data_articles.mdx
+++ b/docs/50_data_publication/50_data_articles.mdx
@@ -5,7 +5,7 @@ slug: "/data_articles"
 # Data Articles
 
 :::info Applies to:
-This article applies to researchers with a dataset that warrants to publish an accompanying scientific data article in a scientific journal.
+This page applies to researchers with a dataset that warrants to publish an accompanying scientific data article in a scientific journal.
 :::
 
 ## Motivation
