feat: moved PID issue to Publication Standards

--- a/docs/50_data_publication/25_best_practice.mdx
+++ b/docs/50_data_publication/25_best_practice.mdx
@@ -9,22 +9,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 ## Introduction
 
-On this page, we provide best practices for data publication in field-specific as well as generic research data repositories. Additionally, we include best practices on special aspects, such as how to use dataset PIDs to link and cite in academic publishing.
-
-## How to use dataset PIDs in scientific articles
-
-During deposition of research data, a [persistent identifier (PID)](/docs/pid) is assigned to the data. Authors should use PIDs in their article for interlinking in two main ways:
-
-- For corresponding data, i.e. directly underlying the results reported in the article, add the PID to the article's [data availability statement](/docs/data_availability_statement), or a similarly termed section. If you believe that your data publication is as decisive as the article itself, add your dataset to the references as well and cite within the text. <!--Vielleicht eher "In order to specifically reference your data within the text, add your dataset to the refernces as well. -->
-- For datasets published by other researchers and reused within a study, add the PID to the reference section of the manuscript and cite within the text accordingly.
-
-:::info Notice:
-This distinction is important, because the link to the dataset in the DOI metadata of scientific articles is differently set, depending on whether the dataset is a directly related source of information or a referenced source of other researchers and its information is reused.
-:::
-
-For a set of reactions, samples, and analyses, to assemble a study, Collection PIDs should be used rather than providing many separate PIDs. Such a study wrapped with a Collection PID can directly correspond to a published scientific article and can be referenced in a bundled manner within the [data availability statement](/docs/data_availability_statement) or references section.
-
-In addition, but second-tier, the PID of a related dataset could also be mentioned in the supplementary PDF, if such a document is generated.
+On this page, we provide best practices for the publication of data in field-specific as well as generic research data repositories. 
 
 ## Best practices for field-specific repositories
 
