--- a/docs/50_data_publication/25_best_practice.mdx
+++ b/docs/50_data_publication/25_best_practice.mdx
@@ -7,15 +7,15 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Best Practices
 
-## Introduction
-
+:::info Info:
 On this page, we provide best practices for the publication of data in field-specific as well as generic research data repositories. 
+:::
 
 ## Best practices for field-specific repositories
 
 For the field-specific repositories [Chemotion Repository](/docs/choose_repository/#chemotion-repository---repository-for-molecules-and-research-data) in combination with [Chemotion ELN](/docs/chemotion_eln), the data is collected along the scientific workflows, analytical data files are automatically converted to open formats, controlled vocabularies or ontologies are used to describe data, and analysis data is interconnected to reactions and samples, hence, chemical structures. The entire Chemotion package allows researchers to collect, analyse, process, store, and publish various types of analytical data attached to reactions and samples in one [digital environment](/docs/smartlab). FAIRification of data along this [data life cycle](/docs/data_life_cycle) is mainly handled by Chemotion. During the seamless export from the ELN into the repository, [PIDs](/docs/pid) (in this case [DOIs](https://www.doi.org/)) are assigned to the deposited data. Chemotion Repository [provides](https://www.chemotion.net/docs/repo/doi) DOIs for reactions, samples, analysis data, and collections (Collection DOI).
 
-Other field-specific repositories such as [CSD and ICSD](/docs/choose_repository/#csd-icsd---joint-ccdcfiz-access-structures-service), [Strenda DB](/docs/choose_repository/#strenda-db---repository-for-reporting-rnzymology-data), [SupraBank](/docs/choose_repository/#suprabank), [NOMAD](/docs/choose_repository/#nomad), and [Chemotion Repository](/docs/choose_repository/#chemotion-repository---repository-for-molecules-and-research-data), if used independently from Chemotion ELN, offer built-in workflows for the aggregation of structured data along the submission pathways, aligned with the [FAIR Data Principles](/docs/fair). This greatly eases FAIR [data publication](/docs/data_publication).
+Other field-specific repositories such as [CSD and ICSD](/docs/choose_repository/#csd-icsd---joint-ccdcfiz-access-structures-service), [Strenda DB](/docs/choose_repository/#strenda-db---repository-for-reporting-rnzymology-data), [SupraBank](/docs/choose_repository/#suprabank), [NOMAD](/docs/choose_repository/#nomad), and [Chemotion Repository](/docs/choose_repository/#chemotion-repository---repository-for-molecules-and-research-data), if used independently from Chemotion ELN, offer built-in workflows for the aggregation of structured data along the submission pathways, aligned with the [FAIR Data Principles](/docs/fair). This greatly facilitates the publication of FAIR data. 
 
 Further aspects to consider are to provide rich metadata, which could be [domain-independent](/docs/metadata/#domain-independent-metadata) metadata or [domain-specific](/docs/metadata/#domain-specific-metadata) metadata, and should also include [provenance information](/docs/provenance), which previously would have typically been included in the supplemental PDF section on general information and protocols. [Minimum information requirements](/docs/metadata/#minimum-information-standards-mi) should be followed, as set by the chemistry community, and implemented in articles and previously also in supplementary PDFs.
 
