fix: contrution licence article -> page

--- a/docs/50_data_publication/70_publication_standards.mdx
+++ b/docs/50_data_publication/70_publication_standards.mdx
@@ -6,7 +6,7 @@ slug: "/publication_standards"
 
 ![Under Construction](/img/Constr_2bl.png)
 
-This article is under construction.
+This page is under construction.
 
 ## How to use dataset PIDs in scientific articles
 
