feat: added info box to Publication Standards page

--- a/docs/50_data_publication/70_publication_standards.mdx
+++ b/docs/50_data_publication/70_publication_standards.mdx
@@ -6,7 +6,9 @@ slug: "/publication_standards"
 
 ![Under Construction](/img/Constr_2bl.png)
 
-This page is under construction.
+:::info Info:
+This page is under construction, while you are welcome to read the already existing paragraphs. On this page we will summarise the standards for the publication of data, formulated as principles, developed within the NFDI4Chem project on Publication Standards. These standards should streamline the publication workflows. Authors, publishers and infrastructure operators are the audience for these standards.
+:::
 
 ## How to use dataset PIDs in scientific articles
 
