feat: added comment on relationtypes in pub std

--- a/docs/50_data_publication/70_publication_standards.mdx
+++ b/docs/50_data_publication/70_publication_standards.mdx
@@ -17,6 +17,8 @@ During deposition of research data, a [persistent identifier (PID)](/docs/pid) i
 - For corresponding data, i.e. directly underlying the results reported in the article, add the PID to the article's [data availability statement](/docs/data_availability_statement), or a similarly termed section. If you believe that your data publication is as decisive as the article itself, add your dataset to the references as well and cite within the text. <!--Vielleicht eher "In order to specifically reference your data within the text, add your dataset to the refernces as well. -->
 - For datasets published by other researchers and reused within a study, add the PID to the reference section of the manuscript and cite within the text accordingly.
 
+<!--Add note on relationType IsSupplementTo and IsSupplementedBy -->
+
 :::info Notice:
 This distinction is important, because the link to the dataset in the DOI metadata of scientific articles is differently set, depending on whether the dataset is a directly related source of information or a referenced source of other researchers and its information is reused.
 :::
