--- a/docs/40_smartlab/10_eln.mdx
+++ b/docs/40_smartlab/10_eln.mdx
@@ -10,11 +10,11 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 ## Introduction
 
-Information technology continuously develops at a fast pace. For example, the smartphones we all carry on a daily basis in our pockets are much faster than a supercomputer from the 80s which you could barely fit in an average bedroom. Unfortunately, this accelerated advancement of information technology has not yet fully reached our chemical laboratories. The paper laboratory notebook is just as popular and widespread as it was 100 years ago, with the very essence of how chemical research data is documented - literally with pen and paper - having only made little progress over the last century. 
+The world around us is constantly evolving. For example, the smartphones in our pockets are much faster than an 80s supercomputer that could barely fit in an average bedroom. Unfortunately, this development has not yet reached our laboratories. The paper lab notebook is as common as it was 100 years ago, and the way chemical research data is documented - literally with pen and paper - has made little progress in the last century. 
 
-Transferring the advancement of the information technology into the lab (smartlab) does not necessarily mean tablets & touch screens in every corner of your laboratory. The term Smartlab is more about the interconnectivity of the entire workflow and handling research data according to the [FAIR principles](/docs/fair). ELNs help to assign rich [metadata](/docs/metadata) to experiments and make the collected data traceable as well as reusable. With the possibility to transfer data from measurement devices directly into the ELN, the ELN is the central storage with all data in one place. From the ELN, data can be easily published into repositories and transferred to suitable long-term [archiving](/docs/data_storage).
+Bringing advances in information technology to our labs (smartlab) does not necessarily mean tablets & touchscreens everywhere in your lab. The term smartlab is more about the interconnectivity of the entire workflow and the handling of research data according to the [FAIR principles](/docs/fair). ELNs help assign rich [metadata](/docs/metadata) to experiments and make the data collected traceable and reusable. With the ability to transfer data from instrumentation directly into the ELN, the ELN has all the data in one place. From the ELN, data can be easily published to repositories and transferred to long-term [archiving](/docs/data_storage).
 
-One of the most important things, that distinguishes an ELN from a white blank paper is the possibility to document [metadata](/docs/metadata) in a structured and ideally in a human as well as machine-readable way. See the following overview for more information on the differences between blank sheets, ELNs and laboratory information management systems (LIMS).
+One of the most important things that distinguishes an ELN from a blank piece of paper is the ability to document [metadata](/docs/metadata) in a structured and ideally human- and machine-readable way. For more information on the differences between simple systems, ELNs and Laboratory Information Management Systems (LIMS), see the following overview.
 
 <div className='container'>
     <div className='row'>
