--- a/docs/40_smartlab/15_choose_eln.mdx
+++ b/docs/40_smartlab/15_choose_eln.mdx
@@ -55,3 +55,20 @@ Table Attribution: ZB MED PUBLISSO ELN-Filter, 2921-06 english.
 
 ### Finding the right ELN
 There are a plethora of ELNs available and it is not always easy to figure out which is the right one for you. To help you choose an ELN, you can use the [ELN Finder](https://eln-finder.ulb.tu-darmstadt.de/home). Here, more than 40 filter criteria are available. Filter criteria are clearly divided into categories and the result list of the identified ELN tools are displayed in an overview alongside Brief descriptions of the individual tools.
+
+### Set up your own ELN
+
+:::There are several ways to set up an electronic lab notebook (ELN) for your team:
+
+- Run an ELN instance on a local server. For example, Chemotion, NFDI4Chem's favourite ELN, can be installed on a server in your data centre or institute. This allows your team to work completely independently: you can customise the ELN, add device connections as needed, and manage users yourself. You can use a Docker container to easily set up your local instance. Alternatively, you can build it from scratch for full flexibility. Click here for a detailed technical description.
+- Use an ELN instance hosted in the cloud. "ELN as a service is a convenient way to test the functionality first. This option is also interesting for smaller teams who are concerned about the effort involved in setting up an ELN on a local server. NFDI4Chem is in the process of setting up Chemotion and some other open source solutions as an ELN as a service. To find out more about when this will be available, please get in touch.
+:::
+
+### Contact Us
+You can contact us at any step of the process:
+:::
+- whether you want to know more about ELNs, need a demonstration of an ELN, a test installation of an ELN or are simply thinking about one.
+- if you want to install an ELN, need help with IT issues etc.
+- want additional features in a running instance etc.
+:::
+Just send an email to [Link](mailto:helpdesk@nfdi4chem.de) with your questions or requests.
