--- a/docs/40_smartlab/15_choose_eln.mdx
+++ b/docs/40_smartlab/15_choose_eln.mdx
@@ -56,8 +56,10 @@ Table Attribution: ZB MED PUBLISSO ELN-Filter, 2921-06 english.
 ### Finding the right ELN
 There are a plethora of ELNs available and it is not always easy to figure out which is the right one for you. To help you choose an ELN, you can use the [ELN Finder](https://eln-finder.ulb.tu-darmstadt.de/home). Here, more than 40 filter criteria are available. Filter criteria are clearly divided into categories and the result list of the identified ELN tools are displayed in an overview alongside Brief descriptions of the individual tools.
 
-### Set up your own ELN
+### Testing an ELN
+Fortunately, you do not always have to install a separate instance to test ELN. At [link](https://demo.chemotion.scc.kit.edu/), the Chemotion team hosts a constantly growing number of test installations of various ELNs that you can try out free of charge.
 
+### Set up your own ELN
 There are several ways to set up an electronic lab notebook (ELN) for your team:
 :::
 - Run an ELN instance on a local server. For example, Chemotion, NFDI4Chem's favourite ELN, can be installed on a server in your data centre or institute. This allows your team to work completely independently: you can customise the ELN, add device connections as needed, and manage users yourself. You can use a Docker container to easily set up your local instance. Alternatively, you can build it from scratch for full flexibility. Click here for a detailed technical description.
